--- a/src/app/private/pages/antedecentes-medicos-crear/antedecentes-medicos-crear.page.html
+++ b/src/app/private/pages/antedecentes-medicos-crear/antedecentes-medicos-crear.page.html
@@ -11,7 +11,7 @@
 
     <ion-list>
 
-        <form [formGroup]="FormularioAntecedentes" (submit)="CreateAntecedentes(FormularioAntecedentes.value)">
+        <form class="formit" [formGroup]="FormularioAntecedentes" (submit)="CreateAntecedentes(FormularioAntecedentes.value)">
 
             <!-- Input de Condicion Medica -->
             <ion-item>
