--- a/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.html
+++ b/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.html
@@ -6,19 +6,19 @@
         <ion-img class="icon-img" src="../../../../assets/img/ante-detalles.png"></ion-img>
 
         <div class="datos">
-            <ion-label *ngIf="antecedente.alergias" class="label-cita" color="dark"><span>Alergía:</span>  {{antecedente.alergias}}</ion-label>
+            <ion-label *ngIf="antecedente.alergias" class="label-cita" color="dark"><span>Alergía:</span> {{antecedente.alergias}}</ion-label>
             <ion-label *ngIf="!antecedente.alergias" class="label-lapso" color="dark"><span class="cirujias_previas-text">No hay Alergia.</span> {{antecedente.cirujias_previas}}</ion-label>
             <br>
-            <ion-label *ngIf="antecedente.tipo_sangre"  class="label-cita" color="dark"><span>Condición Medica: </span>{{antecedente.condicion_medica}}</ion-label>
+            <ion-label *ngIf="antecedente.tipo_sangre" class="label-cita" color="dark"><span>Condición Medica: </span>{{antecedente.condicion_medica}}</ion-label>
             <ion-label *ngIf="!antecedente.tipo_sangre" class="label-lapso" color="dark"><span class="cirujias_previas-text">No hay Condición Medica.</span> {{antecedente.cirujias_previas}}</ion-label>
             <br>
-            <ion-label *ngIf="antecedente.tipo_sangre"  class="label-lapso" color="dark"><span>Tipo de Sangre: </span>{{antecedente.tipo_sangre}}</ion-label>
+            <ion-label *ngIf="antecedente.tipo_sangre" class="label-lapso" color="dark"><span>Tipo de Sangre: </span>{{antecedente.tipo_sangre}}</ion-label>
             <ion-label *ngIf="!antecedente.tipo_sangre" class="label-lapso" color="dark"><span class="cirujias_previas-text">No hay Tipo Sangre.</span> {{antecedente.cirujias_previas}}</ion-label>
             <br>
             <ion-label *ngIf="antecedente.cirujias_previas" class="label-lapso" color="dark"><span>Cirujia Previa:</span> {{antecedente.cirujias_previas}}</ion-label>
             <ion-label *ngIf="!antecedente.cirujias_previas" class="label-lapso" color="dark"><span class="cirujias_previas-text">No hay Cirujias Previas.</span> {{antecedente.cirujias_previas}}</ion-label>
             <br>
-            <ion-label *ngIf="!antecedente.otros_datos"  class="label-lapso" color="dark"><span>Otros Datos:</span> {{antecedente.otros_datos}}</ion-label>
+            <ion-label *ngIf="!antecedente.otros_datos" class="label-lapso" color="dark"><span>Otros Datos:</span> {{antecedente.otros_datos}}</ion-label>
             <ion-label *ngIf="!antecedente.otros_datos" class="label-lapso" color="dark"><span class="cirujias_previas-text">No hay Otros Datos.</span> {{antecedente.cirujias_previas}}</ion-label>
         </div>
 
@@ -26,7 +26,7 @@
 
         <div class="acciones">
             <ion-fab class="edit">
-                <ion-fab-button (click)=" ChangeStateForm()"  color="warning">
+                <ion-fab-button (click)=" ChangeStateForm()" color="warning">
                     <ion-icon name="create"></ion-icon>
                 </ion-fab-button>
             </ion-fab>
@@ -44,7 +44,7 @@
     </div>
 
 
-    <form *ngIf="StateForm" [formGroup]="FormAntecedentesDetalle" (ngSubmit)="Update(FormAntecedentesDetalle.value)">
+    <form class="edit-form" *ngIf="StateForm" [formGroup]="FormAntecedentesDetalle" (ngSubmit)="Update(FormAntecedentesDetalle.value)">
 
 
         <!-- Input de Condicion Medica -->
