--- a/src/app/private/pages/antedecentes-medicos/antedecentes-medicos.page.html
+++ b/src/app/private/pages/antedecentes-medicos/antedecentes-medicos.page.html
@@ -5,7 +5,8 @@
 
 
     <ion-button type="button" [routerLink]="['/antedecentes-medicos-crear']" class="add">
-        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+        <ion-icon class="icon" slot="icon-only" name="add-outline"></ion-icon>
+        Añadir
     </ion-button>
     <app-card-antecedentes-medicos/>
 
