--- a/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.scss
+++ b/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.scss
@@ -61,10 +61,14 @@ ion-badge {
     margin-left: 30px;
 }
 
-span{
+span {
     font-weight: 900;
 }
 
-.cirujias_previas-text{
+.cirujias_previas-text {
     margin-left: 1.5px;
+}
+
+.edit-form {
+    margin: 30px;
 }
