--- a/src/app/private/pages/antedecentes-medicos/antedecentes-medicos.page.scss
+++ b/src/app/private/pages/antedecentes-medicos/antedecentes-medicos.page.scss
@@ -1,8 +1,13 @@
 .add {
     position: relative;
-    left: 180px;
-    width: 50px;
+    left: 140px;
+    width: 130px;
     height: 50px;
+    margin-top: 20px;
+}
+
+.icon {
+    font-size: 24px;
 }
 
 div {
