--- a/src/app/private/pages/examenes-medicos-crear/examenes-medicos-crear.page.scss
+++ b/src/app/private/pages/examenes-medicos-crear/examenes-medicos-crear.page.scss
@@ -1,11 +1,11 @@
 ion-content::part(background) {
-  background-image: url('https://res.cloudinary.com/duhm7ousd/image/upload/v1692322450/Imagenes-MediBook/img/fondo_movil_oto4cx.jpg');
-  background-size: cover;
-  background-position: start;
-  background-repeat: no-repeat;
-
-  /* Agrega un color de fondo con opacidad utilizando rgba() */
-  background-color: rgba(255, 255, 255, 0.9); /* El último valor (0.5) controla la opacidad */
+    background-image: url('https://res.cloudinary.com/duhm7ousd/image/upload/v1692322450/Imagenes-MediBook/img/fondo_movil_oto4cx.jpg');
+    background-size: cover;
+    background-position: start;
+    background-repeat: no-repeat;
+    /* Agrega un color de fondo con opacidad utilizando rgba() */
+    background-color: rgba(255, 255, 255, 0.9);
+    /* El último valor (0.5) controla la opacidad */
 }
 
 .anim {
