--- a/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.scss
+++ b/src/app/private/pages/medicamentos-crear/medicamentos-crear.page.scss
@@ -1,26 +1,31 @@
-.anim{
+.anim {
     width: 250px;
     height: 250px;
     margin: -10px 70px;
 }
 
-ion-list{
+ion-list {
     margin: 30px 0;
 }
 
-.inputs{
+.inputs {
     margin-left: 10px;
 }
 
-ion-badge{
+ion-badge {
     margin-left: 30px;
 }
 
-ion-icon-create{
+ion-icon-create {
     font-size: 30px;
     color: #F39C12;
 }
 
-ion-button{
+ion-button {
     margin-left: 15px;
+}
+
+.formit {
+    margin-left: 20px;
+    margin-left: 20px;
 }
