--- a/src/app/private/pages/vacunas-crear/vacunas-crear.page.scss
+++ b/src/app/private/pages/vacunas-crear/vacunas-crear.page.scss
@@ -3,25 +3,28 @@ ion-datetime {
     --background-rgb: 245, 235, 247;
     --wheel-highlight-background: rgb(218, 216, 255);
     --wheel-fade-background-rgb: 245, 235, 247;
-  }
-  
-  ion-datetime::part(wheel-item) {
-    color: rgb(255, 66, 97);
-  }
-  
-  ion-datetime::part(wheel-item active) {
-    color: rgb(128, 30, 171);
-  }
+}
 
-ion-button{
+ion-datetime::part(wheel-item) {
+    color: rgb(255, 66, 97);
+}
+
+ion-datetime::part(wheel-item active) {
+    color: rgb(128, 30, 171);
+}
+
+ion-button {
     margin-left: 15px;
 }
 
-.inputs{
+.inputs {
     margin-left: 10px;
 }
 
-
-.fecha-input{
+.fecha-input {
     margin-left: -20px;
+}
+
+ion-list {
+    margin: 30px;
 }
