--- a/src/app/private/pages/profile/profile.page.html
+++ b/src/app/private/pages/profile/profile.page.html
@@ -31,7 +31,7 @@
         <div class="data-content">
           <ion-icon name="location-outline"></ion-icon>
           <div class="subtitle">
-            {{medico?.usuario?.ubicacion?.provincia|titlecase}}-<span>
+            <span>{{medico?.usuario?.ubicacion?.provincia|titlecase}}-
               {{medico?.usuario?.ubicacion?.canton|titlecase}}
             </span>
           </div>
