--- a/src/app/private/pages/titulos/components/cards-titulos/cards-titulos.component.html
+++ b/src/app/private/pages/titulos/components/cards-titulos/cards-titulos.component.html
@@ -1,3 +1,6 @@
+<ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+  <ion-refresher-content></ion-refresher-content>
+</ion-refresher>
 <ion-card>
     <ion-card-header>
         <div [routerLink]="['/titulos-detalle/'+titulo.id]" *ngFor="let titulo of title">
